refactor: muda estrutura de banco.

--- a/MedAgendaAPI/MedAgendaAPI/appsettings.json
+++ b/MedAgendaAPI/MedAgendaAPI/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Env:DB_CONNECTION_STRING"
+    "DefaultConnection": "Host=dpg-d0pm5hmuk2gs739qhkt0-a.oregon-postgres.render.com;Port=5432;Database=database_tcym;Username=database_tcym_user;Password=BOWvqlPlQ5nQ2O02XtbV5DFkwIVeX0OK;SSL Mode=Require;Trust Server Certificate=true"
   }
 }
